--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,5 +1,5 @@
 NAME:= btc
 
-SRCS:= BitcoinExchange.cpp Date.cpp load_price_map.cpp load_input_file.cpp main.cpp
+SRCS:= BitcoinExchange.cpp Date.cpp load_price_map.cpp load_input_map.cpp main.cpp
 
 -include ../.commonmakefile
